syntax = "proto3";

package services.rector;

import "resources/rector/config.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/rector;rector";

message GetAppConfigRequest {}

message GetAppConfigResponse {
  resources.rector.AppConfig config = 1;
}

message UpdateAppConfigRequest {
  resources.rector.AppConfig config = 1 [(validate.rules).message.required = true];
}

message UpdateAppConfigResponse {
  resources.rector.AppConfig config = 1;
}

service RectorConfigService {
  // @perm: Name=SuperUser
  rpc GetAppConfig(GetAppConfigRequest) returns (GetAppConfigResponse);
  // @perm: Name=SuperUser
  rpc UpdateAppConfig(UpdateAppConfigRequest) returns (UpdateAppConfigResponse);
}
